* style(nav): add background-size property with value cover to ensure the background image covers the entire element

--- a/style.css
+++ b/style.css
@@ -309,6 +309,7 @@ nav {
   width: 100%;
   height: 30vmax;
   background-image: url(/resources/concrete-backdrop.jpg);
+  background-size: cover;
   overflow: hidden;
 }
 
